--- a/MFCApp.rc
+++ b/MFCApp.rc
@@ -86,22 +86,27 @@ STYLE DS_SETFONT | DS_3DLOOK | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE | WS_CAPTION 
 EXSTYLE WS_EX_APPWINDOW
 FONT 9, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    PUSHBUTTON      "拉普拉斯锐化",Ibtn_laplacian_filter,45,154,50,14
-    PUSHBUTTON      "平均滤波",btn_average_filter,50,60,48,17
-    PUSHBUTTON      "高斯滤波",btn_gauss_filter,50,79,48,16
-    PUSHBUTTON      "中值滤波",btn_median_filter,50,120,48,16
-    GROUPBOX        "低通滤波",Filter_group,24,48,85,93
-    LTEXT           "噪点个数",text_zaodian,26,105,33,10
-    EDITTEXT        edit_zaodian,60,103,37,12,ES_AUTOHSCROLL
+    PUSHBUTTON      "锐化",Ibtn_laplacian_filter,68,167,36,14
+    PUSHBUTTON      "平滑",btn_average_filter,28,167,36,14
+    PUSHBUTTON      "高斯滤波",btn_gauss_filter,52,61,48,16
+    PUSHBUTTON      "中值滤波",btn_median_filter,52,98,48,16
+    GROUPBOX        "低通滤波",Filter_group,24,48,85,72
+    LTEXT           "噪点个数",text_zaodian,26,83,33,10
+    EDITTEXT        edit_zaodian,64,82,37,12,ES_AUTOHSCROLL
     PUSHBUTTON      "选择图片",btn_choose,389,17,50,14
     CONTROL         "",pic_src,"Static",SS_BLACKFRAME | SS_CENTERIMAGE,125,48,324,216
     GROUPBOX        "原图",IDC_STATIC,120,38,332,232
     EDITTEXT        edit_filepath,185,18,195,12,ES_AUTOHSCROLL | WS_DISABLED
     CTEXT           "图片路径：",IDC_STATIC,138,18,39,13,SS_CENTERIMAGE
     PUSHBUTTON      "二值化",btn_binary,51,28,47,16
-    GROUPBOX        "",IDC_STATIC,15,16,100,227
     CONTROL         "",pic_res,"Static",SS_BLACKFRAME,458,48,324,215
     GROUPBOX        "结果",IDC_STATIC,456,38,331,232
+    PUSHBUTTON      "腐蚀",btn_erode,28,185,36,14
+    PUSHBUTTON      "膨胀",btn_dilate,68,185,36,14
+    GROUPBOX        "形态学操作",IDC_STATIC,21,157,90,50
+    PUSHBUTTON      "Sobel",btn_sobel,68,134,37,14
+    PUSHBUTTON      "Laplacian",btn_laplacian,28,134,37,14
+    GROUPBOX        "高通滤波",IDC_STATIC,20,124,90,28
 END
 
 IDD_DIALOG1 DIALOGEX 0, 0, 310, 177
