--- a/MFCApp.rc
+++ b/MFCApp.rc
@@ -84,6 +84,7 @@ IDR_MAINFRAME           ICON                    "res\\MFCApp.ico"
 IDD_MFCAPP_DIALOG DIALOGEX 0, 0, 796, 285
 STYLE DS_SETFONT | DS_3DLOOK | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
+CAPTION "基于CUDA并行计算的图像交互处理"
 FONT 9, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     PUSHBUTTON      "锐化",Ibtn_laplacian_filter,62,239,36,14
